deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beevo-prerender
  namespace: beevo-prerender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beevo-prerender
  template:
    metadata:
      labels:
        app: beevo-prerender
    spec:
      containers:
        - name: node
          image: dfernandesbsolus/beevo-devops-docker-prerender-prerender:latest
          ports:
            - containerPort: 80
          command: ["node", "server.js"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
