ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beevo-ingress
  namespace: beevo-prerender
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prerender.beevo.com
      secretName: beevo-wildcard-cert-secret
  rules:
    - host: prerender.beevo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prerender-service
                port:
                  number: 80
